# egg-toolbox

./: .gitignore  CLAUDE.md  README.md  run_test_server.sh  test.sh
.beads/: issues.jsonl  metadata.json
docs/: egg-toolbox-architecture.md  egg-toolbox-new-session.md  egg-toolbox-plan.md  flash-attention-design.md  omnitool-architecture.md  omnitool-new-session.md  omnitool-plan.md
egg-toolbox/: README.md  context.md  pyproject.toml
egg-toolbox/.claude/: missing_packages.txt
egg-toolbox/egg_toolbox/: __init__.py  __main__.py  grammar.py  orchestrator.py  parser.py  sampling.py  template.py  types.py
egg-toolbox/egg_toolbox/api/: __init__.py  anthropic.py  middleware.py  openai.py
egg-toolbox/egg_toolbox/backends/: base.py  tinygrad.py
egg-toolbox/egg_toolbox/formats/: __init__.py  command_r.py  deepseek.py  functionary.py  generic.py  harmony.py  hermes.py  llama3.py  mistral.py
egg-toolbox/egg_toolbox/models/: .base.py.swp  __init__.py  _flash_attention_numpy.py  base.py  flash_attention.py  llama.py  symbolic_attention.py
egg-toolbox/tests/: conftest.py  test_e2e.py  test_grammar.py  test_sampling.py
egg-toolbox/tests/test_api/: test_anthropic.py  test_json_mode.py  test_streaming_progress.py  (+2 more)
omnitool/: .gitignore  context.md  pyproject.toml
omnitool/omnitool/: __init__.py  __main__.py  detector.py  orchestrator.py  template.py  types.py
omnitool/omnitool/api/: middleware.py  openai.py
omnitool/omnitool/backends/: __init__.py  tinygrad.py
omnitool/omnitool/formats/: __init__.py  base.py  hermes.py
omnitool/tests/: conftest.py  test_e2e.py
(+20 files in other folders)
